# sit_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
sit_bc/: demo_actions.npy  npg.py
sit_il/: test.py  train_bc.py  train_bc_and_vpg.py  train_continuous_vpg.py  train_discrete_vpg.py
sit_il/helpers/: __init__.py  compute_discounted_return.py
sit_il/models/bc/: b.py  bc.py  demo.py  demo_obs.npy  demo_rewards.npy
sit_il/models/bc_plus_vpg/: __init__.py  a.py  bc_vpg_agent.py
sit_il/models/rl/: __init__.py
sit_il/models/rl/npg/vpg/: mlp_continuous_actor.py  mlp_critic.py  mlp_discrete_actor.py  vpg_continuous_agent.py  vpg_discrete_agent.py
sit_il/saved_model/: vpg_actor.h5  vpg_critic.h5
sit_il/utils/: random_seed.py
vpg_Tho/: setup.cfg
vpg_Tho/scripts/: visualize_env.py
vpg_Tho/sit_il/: train_continuous_vpg.py  train_discrete_vpg.py  train_qlearning.py
vpg_Tho/sit_il/helpers/: __init__.py  replay_memory.py
vpg_Tho/sit_il/models/rl/: __init__.py  qlearning.py
vpg_Tho/sit_il/models/rl/vpg/: mlp_continuous_actor.py  mlp_critic.py  mlp_discrete_actor.py  vpg_continuous_agent.py  vpg_discrete_agent.py
vpg_Tho/sit_il/utils/: __init__.py  moving_average.py
vpg_Tho/tests/helpers/: test_replay_memory.py
