[tool.poetry]
name = "sit-il"
version = "0.1.0"
description = ""
authors = ["Tho Nguyen <ndtho8205@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.1,<3.11"
tensorflow = "^2.6.0"
numpy = "<1.20.0"
matplotlib = "^3.4.3"
pandas = "^1.3.3"
scikit-learn = "^0.24.2"
jupyterlab = "^3.1.13"
jupytext = "^1.12.0"
mujoco-py = "<2.1,>=2.0"
gym = "^0.20.0"
pyglet = "^1.5.21"
wandb = "^0.12.3"
torch = {url = "https://download.pytorch.org/whl/cu111/torch-1.9.1%2Bcu111-cp37-cp37m-linux_x86_64.whl"}
black = "21.7b0"
pydot = "^1.4.2"
graphviz = "^0.17"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
flake8-commas = "^2.0.0"
flake8-comprehensions = "^3.6.1"
flake8-bugbear = "^21.9.1"
flake8-eradicate = "^1.1.0"
flake8-bandit = "^2.1.2"
flake8-pytest-style = "^1.5.0"
mypy = "^0.910"
black = "^21.6b0"
isort = "^5.9.3"
pylint = "^2.10.2"
darglint = "^1.8.0"
safety = "^1.10.3"
pyupgrade = "^2.26.0"
pre-commit = "^2.15.0"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
pytest-randomly = "^3.10.1"
jupyterlab-lsp = "^3.8.1"
python-lsp-server = "^1.2.2"
jupyterlab-widgets = "^1.0.2"
jupyterlab-code-formatter = "^1.4.10"
lckr-jupyterlab-variableinspector = "^3.0.9"
aquirdturtle-collapsible-headings = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
length_sort = true
sections = "FUTURE,TYPING,STDLIB,TEST,THIRDPARTY,SECONDPARTY,FIRSTPARTY,LOCALFOLDER"
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
known_test = "pytest,pytest_mock"
known_secondparty = "tensorflow"
known_firstparty = "sit_il"

[tool.black]
line-length = 90
target-version = ["py37"]

[tool.pylint.MASTER]
jobs = 1
extension-pkg-whitelist = ""

[tool.pylint.BASIC]
module-naming-style = "any"

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "missing-module-docstring",
  "missing-function-docstring",
  "too-few-public-methods",
]

[tool.pylint."SIMILARITIES"]
min-similarity-lines = 6
ignore-imports = "yes"

[tool.pylint.DESIGN]
max-args = 10
